[package]
authors = ["aarbuzov"]
name = "zmodem"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"

[features]
default = ["std"]
std = []

[dependencies]
binrw = "0.13.3"
bitflags = "2.4.1"
crc = "3.0.1"
heapless = "0.8.0"
hex = { git = "https://github.com/jarkkojs/rust-hex.git", branch="feat/decode-in-slice" }
tinyvec = "1.6.0"

[dev-dependencies]
clap = "2.21.1"
rstest = "0.18.2"

[[example]]
name = "rzm"

[[example]]
name = "szm"
